# spbstu-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  course.cmake  lab2.cmake  lab3.cmake
include/lab/: anti_attractor.hpp  camera.hpp  fps_counter.hpp  material.hpp  model_view.hpp  particle.hpp  particle_container.hpp  particle_system.hpp  settings.hpp  shaders.hpp  text.hpp  texture.hpp
include/lab/figures/: cone.hpp  cube.hpp  cylindre.hpp  figure.hpp  model.hpp  sphere.hpp  surface.hpp  torus.hpp
include/lab/particles/: anti_attractor.hpp  cone_particle_generator.hpp  cube_collider.hpp  cylinder_attractor.hpp  cylindre_particle_generator.hpp  particle.hpp  particle_container.hpp  particle_system.hpp  point_particle_generator.hpp  sphere_collider.hpp  sphere_particle_generator.hpp  surface_attractor.hpp
include/lab1/: camera.hpp  shaders.hpp  texture.hpp
include/lab1/figures/: figure.hpp  surface.hpp
include/threads/: thread_pool.hpp
scripts/: build.sh  install-deps.sh
src/: course_main.cpp  lab2_main.cpp  lab3_main.cpp  main.cpp  main.cpp.bbb  src.cmake
src/lab/: anti_attractor.cpp  camera.cpp  fps_counter.cpp  material.cpp  model_view.cpp  particle.cpp  particle_container.cpp  particle_system.cpp  shaders.cpp  src.cmake  text.cpp  texture.cpp
src/lab/figures/: cone.cpp  cube.cpp  cylindre.cpp  figure.cpp  model.cpp  sphere.cpp  surface.cpp  torus.cpp
src/lab/particles/: anti_attractor.cpp  cone_particle_generator.cpp  cube_collider.cpp  cylinder_attractor.cpp  cylindre_particle_generator.cpp  particle.cpp  particle_container.cpp  particle_system.cpp  point_particle_generator.cpp  sphere_collider.cpp  sphere_particle_generator.cpp  surface_attractor.cpp
src/lab1/: camera.cpp  material.cpp  shaders.cpp  texture.cpp
src/shaders/: depth.frag  particle_shader.vert  shading.frag  shading.vert
